--- a/26 - Whack A Mole/style.css
+++ b/26 - Whack A Mole/style.css
@@ -13,7 +13,16 @@ body {
   margin:0;
   font-family: 'Amatic SC', cursive;
 }
-
+.begin{
+  display: flex;
+  justify-content: space-around;
+  font-family: 'Amatic SC', cursive;
+}
+button{
+  height: 35px;
+  width: 100px;
+  font-family: 'Amatic SC', cursive;
+}
 h1 {
   text-align: center;
   font-size: 10rem;
